[package]
name = "par-term-prettifier"
version = "0.1.0"
edition = "2024"
authors = ["Paul Robello <probello@gmail.com>"]
description = "Content prettifier for par-term terminal emulator (Markdown, JSON, YAML, diffs, diagrams)"
license = "MIT"
repository = "https://github.com/paulrobello/par-term"
homepage = "https://github.com/paulrobello/par-term"
keywords = ["terminal", "prettifier", "markdown", "syntax-highlighting"]
categories = ["command-line-utilities"]

[dependencies]
par-term-config = { path = "../par-term-config", version = "0.6.0", features = ["watcher", "wgpu-types"] }

regex = "1.12.3"
serde_json = "1.0.149"
fontdb = "0.23"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2"
image = "0.25.9"
ureq = { version = "3.2.0", default-features = false, features = ["native-tls", "gzip"] }
native-tls = "0.2.18"

# Native Mermaid diagram rendering (pure Rust, zero external deps)
mermaid-rs-renderer = { version = "0.2", default-features = false }
# SVG rasterization for mermaid diagram PNG output
resvg = "0.47"
