[package]
name = "par-term-prettifier"
version = "0.1.1"
edition = "2024"
authors = ["Paul Robello <probello@gmail.com>"]
description = "Content prettifier for par-term terminal emulator (Markdown, JSON, YAML, diffs, diagrams)"
license = "MIT"
repository = "https://github.com/paulrobello/par-term"
homepage = "https://github.com/paulrobello/par-term"
keywords = ["terminal", "prettifier", "markdown", "syntax-highlighting"]
categories = ["command-line-utilities"]

[dependencies]
par-term-config = { path = "../par-term-config", version = "0.7.0" }

regex.workspace = true
serde_json.workspace = true
fontdb.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true
image.workspace = true
ureq.workspace = true
native-tls.workspace = true

# Native Mermaid diagram rendering (pure Rust, zero external deps)
mermaid-rs-renderer = { version = "0.2", default-features = false }
# SVG rasterization for mermaid diagram PNG output
resvg = "0.47"
