[package]
name = "par-term-render"
version = "0.6.1"
edition = "2024"
rust-version = "1.91"
description = "GPU-accelerated rendering engine for par-term terminal emulator"
license = "MIT"
repository = "https://github.com/paulrobello/par-term"

[dependencies]
# Workspace crates
par-term-config = { path = "../par-term-config", version = "0.7.1", features = ["wgpu-types"] }
par-term-fonts = { path = "../par-term-fonts", version = "0.1.6" }

# Terminal emulator core (for CursorStyle type)
par-term-emu-core-rust.workspace = true

# GPU rendering
winit.workspace = true
wgpu.workspace = true
bytemuck.workspace = true

# Font rasterization (for glyph rendering)
swash.workspace = true

# GLSL to WGSL transpilation for custom shaders
naga.workspace = true

# Image loading for background images and shader textures
image.workspace = true

# Half-precision float for HDR cubemap textures
half.workspace = true

# GUI overlay rendering (egui integration)
egui.workspace = true
egui-wgpu.workspace = true

# Platform-specific directories (for shader paths)
dirs.workspace = true

# Error handling and logging
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true

# Concurrency
parking_lot.workspace = true
