[package]
name = "par-term-settings-ui"
version = "0.1.0"
edition = "2024"
authors = ["Paul Robello <probello@gmail.com>"]
description = "Settings UI for par-term terminal emulator"
license = "MIT"
repository = "https://github.com/paulrobello/par-term"
homepage = "https://github.com/paulrobello/par-term"
keywords = ["terminal", "settings", "ui", "egui"]
categories = ["gui"]

[dependencies]
# Configuration system (internal)
par-term-config = { path = "../par-term-config", features = ["wgpu-types"] }

# egui for UI
egui = "0.33.3"
egui-wgpu = { version = "0.33.3", optional = true }
egui-winit = { version = "0.33.3", optional = true }

# File dialogs
rfd = "0.17.2"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Logging
log = "0.4.29"

# UUID for profile identifiers
uuid = { version = "1.20", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0.101"

# Async runtime (for async operations)
tokio = { version = "1.49", features = ["sync"] }

# Mutex implementation
parking_lot = "0.12.5"

# Open URLs/files
open = "5.3.3"

# Date/time for screenshots
chrono = "0.4.43"

# Image loading
image = "0.25.9"

# Platform-specific directories
dirs = "6.0"

[features]
default = []
wgpu = ["egui-wgpu", "egui-winit", "par-term-config/wgpu-types"]

[dev-dependencies]
tempfile = "3.25"
