[package]
name = "par-term-settings-ui"
version = "0.9.0"
edition = "2024"
rust-version = "1.91"
authors = ["Paul Robello <probello@gmail.com>"]
description = "Settings UI for par-term terminal emulator"
license = "MIT"
repository = "https://github.com/paulrobello/par-term"
homepage = "https://github.com/paulrobello/par-term"
keywords = ["terminal", "settings", "ui", "egui"]
categories = ["gui"]

[dependencies]
# Configuration system (internal)
par-term-config = { path = "../par-term-config", version = "0.8.0", features = ["wgpu-types"] }

# egui for UI
egui.workspace = true
egui-wgpu = { workspace = true, optional = true }
egui-winit = { workspace = true, optional = true }

# File dialogs
rfd.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
log.workspace = true

# UUID for profile identifiers
uuid.workspace = true

# Error handling
anyhow.workspace = true

# Async runtime (for async operations)
tokio = { workspace = true, features = ["sync"] }

# Mutex implementation
parking_lot.workspace = true

# Open URLs/files
open.workspace = true

# Date/time for screenshots
chrono.workspace = true

# Image loading
image.workspace = true

# Platform-specific directories
dirs.workspace = true

# HTTP client for URL imports
ureq.workspace = true

# YAML serialization for config import/export
serde_yaml_ng.workspace = true

# Regex for trigger pattern validation
regex.workspace = true

# Clipboard support
arboard.workspace = true

[features]
default = []
wgpu = ["egui-wgpu", "egui-winit", "par-term-config/wgpu-types"]

[dev-dependencies]
tempfile.workspace = true
