[package]
name = "par-term-ssh"
version = "0.1.2"
edition = "2024"
authors = ["Paul Robello <probello@gmail.com>"]
description = "SSH host management and discovery for par-term terminal emulator"
license = "MIT"
repository = "https://github.com/paulrobello/par-term"
homepage = "https://github.com/paulrobello/par-term"
keywords = ["terminal", "ssh", "mdns", "discovery"]
categories = ["network-programming"]

[dependencies]
# Serialization
serde.workspace = true

# mDNS/Bonjour service discovery for SSH host auto-detection
mdns-sd.workspace = true

# Platform-specific directories (home dir for ~/.ssh)
dirs.workspace = true

# Logging
log.workspace = true
