[package]
name = "par-term-terminal"
version = "0.2.3"
edition = "2024"
rust-version = "1.91"
authors = ["Paul Robello <probello@gmail.com>"]
description = "Terminal manager for par-term terminal emulator"
license = "MIT"
repository = "https://github.com/paulrobello/par-term"
homepage = "https://github.com/paulrobello/par-term"
keywords = ["terminal", "pty", "emulator"]
categories = ["command-line-utilities"]

[dependencies]
# Terminal emulator core
par-term-emu-core-rust.workspace = true

# Configuration (for Theme, Color, Cell types)
par-term-config = { path = "../par-term-config", version = "0.10.1" }

# Synchronization
parking_lot.workspace = true

# Async runtime (for paste_with_delay)
tokio = { workspace = true, features = ["time", "rt"] }

# Error handling
anyhow.workspace = true

# Logging
log.workspace = true

# Process tree inspection for running-job detection
sysinfo = { workspace = true, features = ["system"] }

# Clipboard support
arboard.workspace = true

[dev-dependencies]
tempfile.workspace = true
