[package]
name = "par-term-tmux"
version = "0.1.8"
edition = "2024"
rust-version = "1.91"
authors = ["Paul Robello <probello@gmail.com>"]
description = "tmux control mode integration for par-term terminal emulator"
license = "MIT"
repository = "https://github.com/paulrobello/par-term"
homepage = "https://github.com/paulrobello/par-term"
keywords = ["terminal", "tmux", "control-mode", "multiplexer"]
categories = ["command-line-utilities"]

[dependencies]
# Configuration (PaneId, TabId)
par-term-config = { path = "../par-term-config", version = "0.8.0" }

# Terminal emulator core (tmux control mode parser)
par-term-emu-core-rust.workspace = true

# Window event types for prefix key handling
winit.workspace = true

# Date/time for status format
chrono.workspace = true

# Regex for sanitizing tmux output
regex.workspace = true

# Cross-platform hostname detection
hostname.workspace = true

# Logging
log.workspace = true

[dev-dependencies]
