[package]
name = "par-term-update"
version = "0.2.4"
edition = "2024"
rust-version = "1.91"
authors = ["Paul Robello <probello@gmail.com>"]
description = "Self-update and update-check system for par-term terminal emulator"
license = "MIT"
repository = "https://github.com/paulrobello/par-term"
homepage = "https://github.com/paulrobello/par-term"
keywords = ["terminal", "update", "self-update"]
categories = ["command-line-utilities"]

[dependencies]
# Configuration types (Config, UpdateCheckFrequency)
par-term-config = { path = "../par-term-config", version = "0.7.1" }

# HTTP client for downloading updates and checking releases
ureq.workspace = true
native-tls.workspace = true

# URL parsing for domain validation (already a transitive dep via ureq)
url = "2"

# Date/time for tracking last check timestamp
chrono.workspace = true

# Semantic version comparison
semver.workspace = true

# SHA-256 hashing for binary verification
sha2.workspace = true

# ZIP archive extraction for binary updates
zip.workspace = true

# Serialization for manifest tracking
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Synchronization primitives
parking_lot.workspace = true

# Logging
log.workspace = true

[dev-dependencies]
tempfile.workspace = true
